--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^7.6.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
+    "stripe": "^14.2.0",
     "validator": "^13.11.0"
   }
 }
